Edited the files
now can see the price and weight and a bit of styling

--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -1,6 +1,16 @@
-@import '../../assets/sass/variables';
-
+/* Home.css */
 .home-page {
-
- 
-}
+    padding: 20px;
+    
+  }
+  
+  .sushi-list {
+    list-style-type: none;
+    padding: 0;
+  }
+  
+  .sushi-list-item {
+    margin-bottom: 20px;
+  }
+  
+  
