--- a/src/components/List/listStyle.scss
+++ b/src/components/List/listStyle.scss
@@ -27,7 +27,7 @@
   }
   
   .sushi-product-details {
-    border: 1px solid #ddd;
+    border: 4px solid #c1b2b2;
     padding: 15px;
     margin-bottom: 10px;
   
