--- a/src/components/Product/productStyle.scss
+++ b/src/components/Product/productStyle.scss
@@ -3,14 +3,16 @@
     border: 1px solid #de3e3e;
     padding: 15px;
     margin-bottom: 10px;
+    align-items: center;
   
     h3 {
       margin-bottom: 10px;
     }
   
     ul {
-      list-style: none;
-      padding: 0;
+      list-style:none;
+      padding: 15px;
+      text-align: center;
     }
   
     li {
